Update backend to accept file uploads
