# backend/openapi.json
@@ -114,6 +114,45 @@
         }
       }
     },
+    "/pdfs/upload": {
+      "post": {
+        "summary": "Preview Uploaded Schedule",
+        "description": "Preview schedule from PDF upload",
+        "operationId": "preview_uploaded_schedule",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_preview_uploaded_schedule"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Eng10Schedule"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/courses": {
       "get": {
         "summary": "Get Courses",
@@ -243,6 +282,20 @@
   },
   "components": {
     "schemas": {
+      "Body_preview_uploaded_schedule": {
+        "properties": {
+          "pdf": {
+            "type": "string",
+            "contentMediaType": "application/octet-stream",
+            "title": "Pdf"
+          }
+        },
+        "type": "object",
+        "required": [
+          "pdf"
+        ],
+        "title": "Body_preview_uploaded_schedule"
+      },
       "BulkDeleteResult": {
         "properties": {
           "total": {
